--- a/PRN232.Lab1.CoffeeStore.API/appsettings.Development.json
+++ b/PRN232.Lab1.CoffeeStore.API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db;Database=CoffeeStoreDB;uid=sa;Password=Nghi000@;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;Integrated Security=false;Timeout=30;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=CoffeeStoreDB;uid=sa;Password=Nghi000@;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;Integrated Security=false;Timeout=30;"
   }
 }
